<resources>

    <string name="app_name">猿来是你</string>
    <string name="app_icon">Image</string>
    <string name="app_text">Test</string>

    <string name="change_for">换一换</string>
    <string name="class_time">58课时</string>

    <string name="project_recommend">项目推荐</string>
    <string name="headline_recommend">头条推荐</string>
    <string name="knowledge_recommend">知识点推荐</string>


    <string name="knowledge">知识点</string>
    <string name="project">项目</string>
    <string name="headline">头条</string>

    <!--提示语-->
    <string name="loading_in">正在加载中…</string>
    <string name="network_anomaly">网络异常，请稍后再试！</string>


    <!--Tab-->
    <string name="home">首页</string>
    <string name="clazz">课程</string>
    <string name="download">下载</string>
    <string name="collection">收藏</string>
    <string name="mine">个人</string>


</resources>
